# ot-harkka

./: .coverage  .gitignore  README.md  news.db  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kauttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py
src/: database_connection.py  db_init.py  init_db.py  main_service.py  news.db  pyproject.toml  tasks.py
src/repositories/: db_init.py
src/services/: harkka.py  main_service.py
src/tests/: main_service_test.py
src/ui/: create_ui.py
