[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Julia <jroukala@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
coverage = "^6.2"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
coverage = "^6.2"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
